force-app/main/default/objects/report_sender__Email_Data__c/report_sender__Email_Data__c.object-meta.xml
<CustomObject>
    <label>Email Data</label>
    <nameField>
        <label>Email Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>