force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Active__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>