force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>