force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Email_CC__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Email_CC__c</fullName>
    <label>Email CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>