force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Is_UTC_used__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Is_UTC_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UTC used</label>
    <type>Checkbox</type>
</CustomField>