force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Job_ID__c</fullName>
    <label>Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>