force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Report_Name__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Report_Name__c</fullName>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>