force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Scheduled_Type__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Scheduled_Type__c</fullName>
    <label>Scheduled Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>