force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Signature__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature</label>
    <type>Checkbox</type>
</CustomField>