force-app/main/default/objects/report_sender__Email_Data__c/fields/report_sender__Subject__c.field-meta.xml
<CustomField>
    <fullName>report_sender__Subject__c</fullName>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>