force-app/main/default/objects/report_sender__Email_Data__c/listViews/report_sender__All.listView-meta.xml
<ListView>
    <fullName>report_sender__All</fullName>
    <columns>NAME</columns>
    <columns>report_sender__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>